<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    cardview:cardCornerRadius="2dp"
    cardview:cardElevation="0dp"
    cardview:cardPreventCornerOverlap="false"
    cardview:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/images" />

            <TextView
                android:id="@+id/txt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/profile_image"
                android:paddingLeft="10dp"
                android:text="@string/username"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_hilang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_nama"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/profile_image"
                android:text="@string/hilang"
                android:textColor="@color/colorBlack1"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="14dp"
                android:background="@color/colorWhite"
                android:text="@string/details"
                android:textColor="@color/colorAccent" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/txt_hilang"
            android:scaleType="centerCrop"
            android:src="@drawable/images" />

        <TextView
            android:id="@+id/deskripsi_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/lorem_ipsum_1"
            android:textSize="14sp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/txt_suggest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/category"
                android:textColor="#a5a5a5"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/txt_suggest"
                android:padding="5dp"
                android:text="@string/item"
                android:textColor="#a5a5a5"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txt_item"
                android:layout_alignBottom="@+id/txt_item"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:text="@string/_25_comments"
                android:textSize="12sp" />

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>