<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:spinnerMode="dialog" />

        <ImageView
            android:id="@+id/img_post"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="fitXY"
            android:src="@drawable/noimage"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/ditemukan"
                android:textSize="14sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hilang"
                android:textSize="14sp"/>

        </RadioGroup>

        <EditText
            android:id="@+id/nama_barang_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/nama_barang"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/deskripsi_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/deskripsi"
            android:inputType="textMultiLine"
            android:padding="16dp"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/lokasi_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/lokasi"
            android:inputType="textUri"
            android:padding="16dp"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            android:padding="16dp"
            tools:ignore="Suspicious0dp">

            <ImageView
                android:id="@+id/open_gallery"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="16dp"
                android:src="@mipmap/ic_gallery"/>

            <ImageView
                android:id="@+id/open_camera"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="16dp"
                android:src="@mipmap/ic_camera"/>

            <ImageView
                android:id="@+id/open_location"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_loc"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>