<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/icon_image"
            android:layout_width="45dp"
            android:layout_height="42dp"
            android:src="@drawable/images"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/icon_image"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/icon_image"
                android:text="@string/username"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/txt_isi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_judul"
                android:layout_toRightOf="@+id/icon_image"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/deskripsi"
                android:textColor="@color/colorBlack1"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/txt_waktu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/details"
                android:textColor="@color/colorGrey"
                android:textSize="10sp"/>

        </LinearLayout>

</RelativeLayout>
