<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="1dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="45dp"
            android:layout_height="42dp"
            android:src="@drawable/images"/>

        <TextView
            android:id="@+id/txt_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/profile_image"
            android:paddingLeft="10dp"
            android:paddingTop="0dp"
            android:text="@string/username"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_hilang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_nama"
            android:layout_toRightOf="@+id/profile_image"
            android:paddingLeft="10dp"
            android:text="@string/hilang"
            android:textColor="@color/colorBlack1"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/txt_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/item"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>